<resources>
    <string name="app_name">LetsChill_FinalProject</string>

    <!-- Splash Screen Strings -->
    <string name="logo_contentDescription">LetsChill Logo</string>

    <!-- Sign In Fragment Strings -->
    <string name="background_contentDescription">Sign In background image</string>
    <string name="editText_emailHint">Email address</string>
    <string name="editText_passwordHint">Password</string>
    <string name="button_signIn">Sign in</string>
    <string name="checkBox_rememberMe">Remember me</string>
    <string name="button_forgotPassword">Forgot password?</string>
    <string name="button_facebook">Sign in with Facebook</string>
    <string name="button_noAccount">Don\'t have an account yet? Sign up.</string>
    <string name="toast_noInternet">No internet</string>
    <string name="toast_fbAuth_failed">Authentication failed</string>
    <string name="facebook_toast_fail">Error! Facebook Authentication failed.</string>


    <!-- Sign Up Fragment Strings -->
    <string name="editText_usernameHint">Username</string>
    <string name="editText_repeatPassword">Repeat password</string>
    <string name="button_signUp">Sign up</string>
    <string name="alert_title_noInternet">No internet</string>
    <string name="alert_content_noInternet">Connect your device to the internet</string>
    <string name="alert_buttonOk_noInternet">OK</string>

    <!-- Facebook Login -->
    <string name="facebook_app_id">2220849721466494</string>
    <string name="fb_login_protocol_scheme">fb2220849721466494</string>

    <!-- Forgot Password Fragment Strings -->
    <string name="button_send">Send</string>
    <string name="toast_instructions">Instructions to reset your password were sent to your email</string>

    <!-- Interests Fragment Strings -->
    <string name="textView_title_interests">Interests</string>
    <string name="textView_subTitle_interests">Choose at least 3 to continue</string>

    <!-- Interests Menu Strings -->
    <string name="menu_text_interests">DONE</string>
    <string name="save">Save</string>

    <!-- Create Event Fragment Strings -->
    <string name="event_name">Event Name</string>
    <string name="event_location">Location</string>
    <string name="event_description">Event Description</string>
    <string name="event_date">Date</string>
    <string name="event_time">Time</string>
    <string name="at">at</string>
    <string name="event_participants">Participants</string>
    <string name="event_category">Category</string>
    <string name="is_this_a_recurring_event">Is this a recurring event?</string>
    <string name="is_this_a_public_event">Is this a public event?</string>
    <string name="ten">10</string>
    <string name="none">none</string>
    <string name="create_toast_empty">Please do not leave empty fields</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string-array name="spinner_category">
        <item>Video Game</item>
        <item>Sports</item>
        <item>Technology</item>
        <item>Outdoor Activities</item>
        <item>Indoor Activities</item>
        <item>Arts</item>
        <item>Music</item>
        <item>Movies</item>
        <item>Auto</item>
        <item>Food</item>
        <item>Fitness</item>
    </string-array>
    <string name="editText_error_title">This field must be longer than 2 characters and less than 50 characters</string>
    <string name="editText_error_description">This field must be longer than 2 characters and less than 280 characters</string>
    <string name="editText_error_sameTime">Start time and end time cannot be the same time</string>

    <!-- Main Activity Strings -->
    <string name="menu_profile">Profile</string>
    <string name="menu_my_events">My Events</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_logout">Log out</string>
    <string name="tab_today">TODAY</string>
    <string name="tab_upcoming">UPCOMING</string>
    <string name="tab_past">PAST</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="example_dateTime">November 30 / 6:00 PM - 8:00 PM</string>
    <string name="category">Category</string>
    <string name="example_participants">Jenny Pomegato (confirmed), Lucas tavares, Richard Ox, Thomas Gerard, Christopher Mouton (confirmed) ….</string>
    <string name="participants">Participants</string>
    <string name="description">Description</string>
    <string name="example_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam orci orci, ullamcorper in mollis eget, posuere in magna. Aliquam luctus pellentesque semper. Cras aliquam sem venenatis libero maximus, gravida laoreet tellus auctor. Praesent finibus lorem ut augue sodales fringilla.</string>
    <string name="host">Host</string>
    <string name="example_host">Prajwal Ramamurthy</string>
    <string name="example_title">Movies at Lincoln</string>
    <string name="example_pplJoined">0/10 people joined</string>
    <string name="example_rsvp">0/10 RSVPs</string>
    <string name="date_and_time">Date and Time</string>
    <string name="location">Location</string>
    <string name="example_location">116 S Semoran Blvd, Winter Park, FL</string>
    <string name="join">Join</string>
    <string name="rsvp">RSVP</string>
    <string name="leave">Leave</string>
    <string name="to">to</string>

    <!-- Edit Event Strings -->
    <string name="toast_changesSaved">Changes were saved</string>
    <string name="toast_firebase_join">You have successfully joined the event.</string>
    <string name="toast_deleted">Event deleted</string>
    <string name="alert_title">Delete</string>
    <string name="alert_message">Are you sure you want to delete this event?</string>
    <string name="alert_Yes">Yes</string>
    <string name="alert_No">No</string>

    <!-- My Events Strings -->
    <string name="tab_joined">JOINED</string>
    <string name="tab_hosting">HOSTING</string>
    <string name="toast_create_imageBack">Please select an event image!</string>
    <string name="toast_event_joined">Congrats! You have joined this event.</string>

    <!-- MapActivity Strings -->
    <string name="searchbox">Search here</string>
    <string name="alert_title_address">Address</string>
    <string name="alert_message_address">Not enough information. Could not find the address.</string>
    <string name="alert_button_address">OK</string>

    <!-- Notifications Strings -->
    <string name="notifications">Notifications</string>
    <string name="event_changed">Event Changed</string>
    <string name="guest_joined">Guest Joined</string>
    <string name="close_to_event_time">Close to Event Time</string>
    <string name="string_current">Notify me when something about the event I am currently participating has changed</string>
    <string name="string_notify_hosting">Notify me when someone join an event that I am hosting</string>
    <string name="string_event_start">Notify me once when my events are about to start</string>

    <!-- Profile Fragment Layout Strings -->
    <string name="profile_name">Full Name</string>
    <string name="profile_username">Username</string>
    <string name="profile_email">Email Address</string>
    <string name="profile_interests">Interests</string>
    <string name="profile_feedback_title">Feedback</string>
    <string name="profile_feedback_subtitle">We\'d would to hear your experience</string>
    <string name="profile_termsAndConditions_title">Terms and Conditions</string>
    <string name="profile_termsAndConditions_subtitle">Legal, Tems and Conditions, Version</string>
    <string name="profile_notSpecified">Not specified</string>
    <string name="profile_notVerified">not verified</string>

    <!-- Edit Profile Fragment Strings -->
    <string name="profile_phone">Phone Number</string>
    <string name="profile_verifyRequirements">You must sign up with a Facebook Account, provide a phone number, and an email address in order to be verified</string>
    <string name="map_open_toast">Select any location on the map</string>
    <string name="max_participants_string">Must be min 2 max 1000 participants</string>
    <string name="string_event_success">Event successfully created.</string>

    <!-- Verification Fragment Strings -->
    <string name="verification_title">Verification Code</string>
    <string name="verification_subtitle">We\’ve just sent you an SMS with the verification code! Add the code below to proceed.</string>
    <string name="verification_hint">123—456</string>
    <string name="verification_button_verify">Verify</string>
    <string name="verification_phone">+1 (555) 345—8765</string>
    <string name="verification_button_send">Send</string>
    <string name="alert_verified_title">Verified</string>
    <string name="alert_verified_message">Your account is already verified!</string>
    <string name="alert_verified_button">OK</string>

</resources>
