<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_contentDescription"
        android:scaleType="centerCrop"
        android:src="@drawable/signin_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:hint="@string/editText_emailHint"
        style="@style/editText_signIn_style"
        android:drawableStart="@drawable/edittext_icon_email" />

    <EditText
        android:id="@+id/editText_password"
        style="@style/editText_signIn_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/edittext_icon_password"
        android:ems="10"
        android:hint="@string/editText_passwordHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editText_email"
        app:layout_constraintStart_toStartOf="@+id/editText_email"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />

    <Button
        android:id="@+id/button_signin"
        style="@style/button_orange_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/button_signIn"
        app:layout_constraintEnd_toEndOf="@+id/editText_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_password"
        app:layout_constraintTop_toBottomOf="@+id/textView_forgotPw" />

    <CheckBox
        android:id="@+id/checkBox_create_recurring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/checkBox_rememberMe"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_signin"
        app:layout_constraintTop_toBottomOf="@+id/button_signin"
        android:textColor="@android:color/white"
        android:buttonTint="@color/colorAccent"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_regular"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/button_facebook_signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_signin_facebook"
        android:drawableStart="@drawable/button_icon_facebook"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/button_facebook"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView_noAccount"
        app:layout_constraintEnd_toEndOf="@+id/textView_forgotPw"
        app:layout_constraintStart_toStartOf="@+id/checkBox_create_recurring"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textView_forgotPw"
        style="@style/clickable_textViews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/button_forgotPassword"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/editText_email"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    <TextView
        android:id="@+id/textView_noAccount"
        style="@style/clickable_textViews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/button_noAccount"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="286dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_noAccount"
        app:layout_constraintEnd_toEndOf="@+id/button_signin"
        app:layout_constraintStart_toStartOf="@+id/button_signin" />

    <ProgressBar
        android:id="@+id/progressBar_signin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:indeterminateTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/textView_forgotPw"
        app:layout_constraintStart_toStartOf="@+id/checkBox_create_recurring"
        app:layout_constraintTop_toTopOf="@+id/editText_email" />

</android.support.constraint.ConstraintLayout>