<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_contentDescription"
        android:scaleType="centerCrop"
        android:src="@drawable/signin_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_email_forgotPw"
        style="@style/editText_signIn_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="50dp"
        android:drawableStart="@drawable/edittext_icon_email"
        android:ems="10"
        android:hint="@string/editText_emailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/button_send"
        style="@style/button_orange_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/button_send"
        app:layout_constraintEnd_toEndOf="@+id/editText_email_forgotPw"
        app:layout_constraintStart_toStartOf="@+id/editText_email_forgotPw"
        app:layout_constraintTop_toBottomOf="@+id/editText_email_forgotPw" />

    <ProgressBar
        android:id="@+id/progressBar_forgotPw"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/button_send"
        app:layout_constraintStart_toStartOf="@+id/button_send"
        app:layout_constraintTop_toTopOf="@+id/editText_email_forgotPw" />
</android.support.constraint.ConstraintLayout>